--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -2,11 +2,23 @@
   <h1>New Person</h1>
 </div>
 
+<% if @person.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@person.errors.count, "error") %> prohibited this post from being saved:</h2>
+
+    <ul>
+    <% @person.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for @person, html: {class: "form-horizontal"} do |f| %>
   <div class="form-group">
     <%= f.label :first_name, class: "control-label col-sm-2" %>
     <div class="col-sm-4">
-      <%= f.text_field :first_name, class: "form-control" %>
+      <%= f.text_field :first_name, class: "form-control"  %>
     </div>
   </div>
   <div class="form-group">
